// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LogEntry > (Snapshot) renders core log entry 1`] = `
<div
  class="group border-border/50 relative grid grid-cols-[auto_auto_auto_auto_1fr] items-start gap-2 border-b px-2 py-2 font-mono text-sm border-l-[3px] border-l-accent-cyan"
>
  <div
    class="flex w-4 items-center justify-center pt-0.5"
  >
    <span
      class="size-4"
    />
  </div>
  <span
    class="text-foreground/60 whitespace-nowrap"
    data-testid="log-timestamp"
  >
    12:30:45.123
  </span>
  <button
    class="inline-flex w-14 items-center justify-center rounded px-1.5 py-0.5 text-xs font-bold uppercase bg-accent-cyan text-foreground cursor-pointer hover:opacity-80"
    data-testid="log-level"
    type="button"
  >
    INFO
  </button>
  <button
    class="inline-flex items-center justify-center rounded-full px-2 py-0.5 text-xs font-medium bg-foreground/10 text-foreground cursor-pointer hover:opacity-80"
    data-testid="log-scope"
    type="button"
  >
    app
  </button>
  <span
    class="text-foreground break-all whitespace-pre-wrap"
    data-testid="log-message"
  >
    Application started
  </span>
  <div
    class="absolute top-1 right-2 hidden group-hover:block"
    data-testid="log-action-panel"
  >
    <button
      class="inline-flex cursor-pointer items-center rounded-md whitespace-nowrap transition-all outline-none disabled:cursor-not-allowed disabled:opacity-50 text-foreground bg-primary border-border shadow-shadow hover:translate-x-shadow-x hover:translate-y-shadow-y border-(length:--border-width) hover:shadow-none size-8 justify-center"
      data-headlessui-state=""
      data-testid="log-copy-button"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-copy size-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="14"
          rx="2"
          ry="2"
          width="14"
          x="8"
          y="8"
        />
        <path
          d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`LogEntry > (Snapshot) renders plugin log entry 1`] = `
<div
  class="group border-border/50 relative grid grid-cols-[auto_auto_auto_auto_1fr] items-start gap-2 border-b px-2 py-2 font-mono text-sm border-l-[3px] border-l-accent-cyan"
>
  <div
    class="flex w-4 items-center justify-center pt-0.5"
  >
    <span
      class="size-4"
    />
  </div>
  <span
    class="text-foreground/60 whitespace-nowrap"
    data-testid="log-timestamp"
  >
    12:30:45.123
  </span>
  <button
    class="inline-flex w-14 items-center justify-center rounded px-1.5 py-0.5 text-xs font-bold uppercase bg-accent-cyan text-foreground cursor-pointer hover:opacity-80"
    data-testid="log-level"
    type="button"
  >
    INFO
  </button>
  <button
    class="inline-flex items-center justify-center rounded-full px-2 py-0.5 text-xs font-medium bg-accent-orange/50 text-foreground cursor-pointer hover:opacity-80"
    data-testid="log-scope"
    type="button"
  >
    youtube-music
  </button>
  <span
    class="text-foreground break-all whitespace-pre-wrap"
    data-testid="log-message"
  >
    Application started
  </span>
  <div
    class="absolute top-1 right-2 hidden group-hover:block"
    data-testid="log-action-panel"
  >
    <button
      class="inline-flex cursor-pointer items-center rounded-md whitespace-nowrap transition-all outline-none disabled:cursor-not-allowed disabled:opacity-50 text-foreground bg-primary border-border shadow-shadow hover:translate-x-shadow-x hover:translate-y-shadow-y border-(length:--border-width) hover:shadow-none size-8 justify-center"
      data-headlessui-state=""
      data-testid="log-copy-button"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-copy size-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="14"
          rx="2"
          ry="2"
          width="14"
          x="8"
          y="8"
        />
        <path
          d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
        />
      </svg>
    </button>
  </div>
</div>
`;
